fix bug for only full_text queries in user_contents#index, correct layout alignment of details and references in user_contents fix title of saved searches
git-svn-id: https://dev.cedis.fu-berlin.de/svn/eaz/zwar_archive/trunk@3000 34bfa2f4-0c52-0410-afca-732f319d8f5a

--- a/public/stylesheets/user-content.css
+++ b/public/stylesheets/user-content.css
@@ -157,8 +157,13 @@
     width: 390px;
 }
 
+#user_contents .details .properties,
+#user_contents .details .references {
+    padding: 1em 0 2em 0;
+}
+
 #user_contents .details li {
-    margin-top: 0.5em;
+    margin-bottom: 0.5em;
     background-image: none;
 }
 
